--- a/Week 15/main.html
+++ b/Week 15/main.html
@@ -1,11 +1,10 @@
-
 <head>
     <style>
         .carousel {
             overflow: hidden;
             width: 500px;
             height: 280px;
-            padding-left: 250px;
+            /* padding-left: 250px; */
             white-space: nowrap;
         }
         .carousel>div {
@@ -13,7 +12,7 @@
             height: 280px;
             display: inline-block;
             background-size: contain;
-            transition: ease 0.5s;
+            /* transition: ease 0.5s; */
         }
     </style>
 </head>
